# ROS2-benchmark

./: .gitignore  readme.md
experiments/fastdds/: CMakeLists.txt
experiments/fastdds/src/: SimpleTopic.cxx  SimpleTopic.h  SimpleTopic.idl  SimpleTopicPubSubTypes.cxx  SimpleTopicPubSubTypes.h  publisher.cpp  subscriber.cpp
experiments/ros/: result_1.txt  result_2.txt  result_3.txt  result_4.txt  result_5.txt  service_test.sh  test.sh  topic_test.sh
experiments/ros/src/service_test/: CMakeLists.txt  package.xml
experiments/ros/src/service_test/src/: client.cpp  server.cpp
experiments/ros/src/service_test/srv/: Echo.srv
experiments/ros/src/topic_test/: CMakeLists.txt  package.xml
experiments/ros/src/topic_test/src/: publisher.cpp  subscriber.cpp
experiments/ros2/service_test/: rtt.txt  rtt_dist.txt  throughput.txt
experiments/ros2/topic_test/: latency.txt  latency_dist.txt  throughput_1ms.txt
experiments/service_test/: CMakeLists.txt
experiments/stats/: impl_cmp.ipynb  stats.ipynb
experiments/tcp/: 10-servers.txt  cdf.py  client  client.c  server  server.c  single-server-10.txt  single-server.txt  tcp-keep-alive.txt
experiments/tcp_epoll/: client  client.c  server  server.c
experiments/topic_test/: throughput_100ms.txt  throughput_10ms.txt
experiments/udp/: cdf.py  client  client-latency.txt  client.c  server  server.c
experiments/udp_multicast/: client  client.c  server  server.c
topic-test/install/: local_setup.sh  setup.sh
topic-test/log/: latest_build
topic-test/stats/: stats.ipynb
topic-test/topic_test/: CMakeLists.txt
(+35 files in other folders)
